welcome.lessons.welcome.array.array123.Array123.scala.error
array123:13: error: ';' expected but 'if' found.
	} if (a==true && b==true && c==true) {
          ^